--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chart.js": "^4.4.9",
     "firebase": "^11.6.1",
+    "lucide-react": "^0.507.0",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-resize-image": "^1.0.7",
     "react": "^18.3.1",
@@ -33,6 +34,7 @@
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.3.1"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
