--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "chart.js": "^4.4.9",
+    "filepond": "^4.32.7",
+    "filepond-plugin-file-validate-type": "^1.2.9",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "firebase": "^11.6.1",
     "lucide-react": "^0.507.0",
     "quill-image-resize-module-react": "^3.0.0",
@@ -18,6 +22,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-filepond": "^7.1.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.5.3"
   },
