--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "filepond": "^4.32.7",
     "filepond-plugin-file-validate-type": "^1.2.9",
