--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-filepond": "^7.1.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.5.3",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
